--- a/src/css/bootstrap.css
+++ b/src/css/bootstrap.css
@@ -2883,7 +2883,7 @@ fieldset[disabled] a.btn {
 .btn-outline-primary:active, .btn-outline-primary.active,
 .show > .btn-outline-primary.dropdown-toggle {
   color: #fff;
-  background-color: #0275d8;
+  background-color: darkred;
   border-color: #0275d8;
 }
 
