--- a/src/css/style.css
+++ b/src/css/style.css
@@ -54,12 +54,6 @@
     vertical-align: top;
 }
 
-.carrusel {
-    margin-left: 5px;
-    display: inline-block;
-    text-align: left;
-}
-
 .carousel-caption {
     position: absolute; 
     left:0.2%;
@@ -67,4 +61,10 @@
 
     text-align: left;
    /*x background-color: rgba(0, 0, 0, 0.5); /* Añadir para conseguir el fondo con opacidad */
+}
+
+input[type="search"]{
+    padding: 10px;
+    padding-right: 35px;
+    border: none;
 }
